# ChangeLog for dev-perl/version
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/version/ChangeLog,v 1.55 2008/04/23 09:05:20 tove Exp $

*version-0.74 (23 Apr 2008)

  23 Apr 2008; Torsten Veller <tove@gentoo.org> version-0.73.ebuild,
  +version-0.74.ebuild:
  Version bump. Fix HOMEPAGE and move build-module to DEPEND only.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> version-0.73.ebuild:
  Stable for HPPA too.

  23 Mar 2008; Alexis Ballier <aballier@gentoo.org> version-0.73.ebuild:
  keyword ~x86-fbsd

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> version-0.73.ebuild:
  ppc. stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> version-0.73.ebuild:
  alpha/ia64/sparc/x86 stable

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> version-0.73.ebuild:
  Stable on ppc64

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> version-0.73.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> version-0.73.ebuild:
  amd64 stable

*version-0.73 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +version-0.73.ebuild:
  Version bump

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  version-0.72.03.ebuild:
  Stable on ppc.

  07 Jul 2007; Tom Gall <tgall@gentoo.org> version-0.72.03.ebuild:
  stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> version-0.72.03.ebuild:
  alpha/ia64/x86 stable

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> version-0.72.03.ebuild:
  Stable on mips.

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  version-0.72.03.ebuild:
  Marking sparc stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> version-0.70.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> version-0.70.ebuild:
  ppc stable

*version-0.72.03 (22 Apr 2007)

  22 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  -version-0.72.01.ebuild, +version-0.72.03.ebuild:
  Version bump

*version-0.72.01 (16 Apr 2007)
